# bvh-builder-nocuda

./: !  .gitignore  .~lock.2.3. Bounding volumes.pptx#  2.3. Bounding volumes.pptx  README.md  bibliography.md  darkorabbit.blend  report.md
b/: CMakeCache.txt  Makefile  cmake.sh  cmake_install.cmake  imgui.ini
b/cgra/: Makefile  cmake_install.cmake
b/res/: Makefile  cmake_install.cmake
models/: curtain.blend  curtain.mtl  darkorabbit.mtl  lionshield.blend  lionshield.blend1  lionshield.mtl  pillar.blend  pillar.blend1  pillar.mtl  zpole.blend
report/: biblio.bib  report.md
srctree/: BVH.hpp  BVHRenderer.cpp  BVHRenderer.hpp  BVH_BBox.cpp  BVH_MeshLoad.cpp  BVH_NodeCode.cpp  BVH_Nodes.cpp  BVH_Primitives.cpp  BVH_Sender.cpp  CMakeLists.txt  bvhApp-sender.cpp  bvhApp.cpp  bvhApp.hpp  bvhApp_dogui.cpp  bvhApp_inevents.cpp  bvhApp_renderer.cpp  bvhApp_renderer.hpp  drawStyle.hpp  includes-l1.hpp  main.cpp
srctree/CMake/: CGRACompiler.cmake  CGRAFunctions.cmake  FindGLFW.cmake
srctree/cgra/: CMakeLists.txt  cmake_install.cmake  imgui_impl_glfw_gl3.cpp  matrix.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  wavefront.cpp  wavefront.hpp
srctree/res/: Makefile  cmake_install.cmake
srctree/res/models/: zpole.blend1  zpole.mtl
srctree/res/shaders/: bvhcomp.glsl  bvhfrag.glsl  el_topo.glsl  lambert.fs.glsl  pick.fs.glsl  pick2.fs.glsl  simple.fs.glsl  simple.vs.glsl
srctree/submods/stringStreamConCat/: vmpwStringStreamConcat.cpp  vmpwStringStreamConcat.hpp
